--- a/pokemon/assets/css/index.css
+++ b/pokemon/assets/css/index.css
@@ -1,3 +1,11 @@
-body {
+#logo {
+    width: 50px;
+    height: 50px;
+    background-image: url("../images/logo.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     background-color: black;
+    border-radius: 50%;
+
 }
