--- a/pokemon/assets/css/index.css
+++ b/pokemon/assets/css/index.css
@@ -1,3 +1,7 @@
+nav {
+    border: solid black 1px;
+}
+
 #logo {
     width: 50px;
     height: 50px;
@@ -7,5 +11,25 @@
     background-size: cover;
     background-color: black;
     border-radius: 50%;
+}
 
+#home #list {
+    border: solid black 1px;
+}
+
+#home .card {
+    border: solid black 1px;
+}
+
+#home .thumbnail {
+    border: solid black 1px;
+    width: 100px;
+    height: 100px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#home .details {
+    border: solid black 1px;
 }
