--- a/pokemon/assets/css/index.css
+++ b/pokemon/assets/css/index.css
@@ -1,5 +1,5 @@
 nav {
-    /* border: solid black 1px; */
+    border: solid black 1px;
 }
 
 #logo {
@@ -13,18 +13,25 @@ nav {
     border-radius: 50%;
 }
 
+#home .icon-container img{
+    width: 50px;
+}
+
 #home #list {
-    /* border: solid black 1px; */
+    border: solid black 1px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    padding: 0 30px;
+    max-width: 800px;
+    margin: 0 auto;
 }
 
 #home .card {
-    /* border: solid black 1px; */
+    border: solid black 1px;
 }
 
 #home .thumbnail {
-    /* border: solid black 1px; */
+    border: solid black 1px;
     width: 150px;
     height: 150px;
     background-position: center;
@@ -34,7 +41,7 @@ nav {
 }
 
 #home .details {
-    /* border: solid black 1px; */
+    border: solid black 1px;
     font-family: 'Press Start 2P', cursive;
     padding:10px;
     font-size: .8em;
