converted icons from html to JS

--- a/pokemon/assets/css/index.css
+++ b/pokemon/assets/css/index.css
@@ -29,6 +29,7 @@ nav {
     padding: 12px;
     text-align: center;
     margin: 10px;
+    /* cursor: url("../images/icons/pokeball-cursor.png"), pointer; */
     cursor: pointer;
     transition: .66s;
     border-radius: 10px;
@@ -48,6 +49,7 @@ nav {
     /* border: solid black 1px; */
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
     padding: 20px 30px;
     max-width: 800px;
     margin: 0 auto;
