--- a/pokemon/assets/css/index.css
+++ b/pokemon/assets/css/index.css
@@ -19,7 +19,7 @@ nav {
 
 #home #search-sort-filter-container{
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     max-width: 800px;
     margin: 0 auto;
 }
@@ -57,6 +57,15 @@ nav {
 
 #home .card {
     /* border: solid black 1px; */
+    cursor: pointer;
+    transition: .66s;
+}
+
+
+#home .card:hover {
+    transform: scale(.9) rotate(.015turn);
+    background-color: #fff2f6;
+    border-radius: 20px;
 }
 
 #home .thumbnail {
@@ -102,6 +111,10 @@ nav {
 .active{
     color:red;
     text-decoration: underline;
+}
+
+.active.all{
+    color: lightgrey;
 }
 
 .active.fire{
