--- a/pokemon/assets/css/index.css
+++ b/pokemon/assets/css/index.css
@@ -4,7 +4,7 @@ nav {
 
 #logo {
     width: 50px;
-    height: 50px;
+    /* height: 50px; */
     background-image: url("../images/logo.png");
     background-position: center;
     background-repeat: no-repeat;
@@ -44,7 +44,7 @@ nav {
 #home #list {
     /* border: solid black 1px; */
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     gap: 20px;
     padding: 20px 30px;
     max-width: 800px;
@@ -66,18 +66,18 @@ nav {
 
 #home .thumbnail {
     /* border: solid black 1px; */
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     margin: 0 auto;
 }
 
 #home .details {
     /* border: solid black 1px; */
     padding:10px;
-    font-size: .8em;
+    font-size: .6em;
 }
 
 #home .details div{
